# dl-bioinf

./: README.md  pyproject.toml
assignments/: 01_tensor_ops.ipynb  02_linear_regression.ipynb
workshops/: 01_tensors.ipynb  02_autograd.ipynb  03_backprop.ipynb  04_modules.ipynb
