[tool.poetry]
name = "dl-bioinf"
version = "0.1.0"
description = ""
authors = ["norsage <norsage@github.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
torchvision = "^0.21.0"

torch-geometric = "^2.6.1"
# https://github.com/python-poetry/poetry/issues/9191
torch-scatter = [
    {platform = "linux", version = "2.1.2", source = "pyg-gpu"},
    {platform = "darwin", python = "3.10", url = "https://data.pyg.org/whl/torch-2.6.0%2Bcpu/torch_scatter-2.1.2-cp310-cp310-macosx_10_9_universal2.whl"},
    {platform = "darwin", python = "3.11", url = "https://data.pyg.org/whl/torch-2.6.0%2Bcpu/torch_scatter-2.1.2-cp311-cp311-macosx_10_9_universal2.whl"},
    {platform = "darwin", python = "3.12", url = "https://data.pyg.org/whl/torch-2.6.0%2Bcpu/torch_scatter-2.1.2-cp312-cp312-macosx_10_13_universal2.whl"},
]
torch-cluster = [
    {platform = "linux", version = "1.6.3", source = "pyg-gpu"},
    {platform = "darwin", python = "3.10", url = "https://data.pyg.org/whl/torch-2.6.0%2Bcpu/torch_cluster-1.6.3-cp310-cp310-macosx_10_9_universal2.whl"},
    {platform = "darwin", python = "3.11", url = "https://data.pyg.org/whl/torch-2.6.0%2Bcpu/torch_cluster-1.6.3-cp311-cp311-macosx_10_9_universal2.whl"},
    {platform = "darwin", python = "3.12", url = "https://data.pyg.org/whl/torch-2.6.0%2Bcpu/torch_cluster-1.6.3-cp312-cp312-macosx_10_13_universal2.whl"},
]
torch-sparse = [
    {version = "0.6.18", source = "pyg-gpu", platform = "linux"},
    {platform = "darwin", python = "3.10", url = "https://data.pyg.org/whl/torch-2.6.0%2Bcpu/torch_sparse-0.6.18-cp310-cp310-macosx_11_0_universal2.whl"},
    {platform = "darwin", python = "3.11", url = "https://data.pyg.org/whl/torch-2.6.0%2Bcpu/torch_sparse-0.6.18-cp311-cp311-macosx_11_0_universal2.whl"},
    {platform = "darwin", python = "3.12", url = "https://data.pyg.org/whl/torch-2.6.0%2Bcpu/torch_sparse-0.6.18-cp312-cp312-macosx_11_0_universal2.whl"},
]
jupyter = "^1.1.1"
notebook = "^7.3.3"
plotly = "^6.0.1"
tensorboard = "^2.19.0"
lightning = "^2.5.1"
hydra-core = "^1.3.2"
pandas = "^2.2.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "pyg-gpu"
url = "https://data.pyg.org/whl/torch-2.6.0+cu126.html"
priority = "explicit"
